Revision history for {{$dist->name}}

{{$NEXT}}

0.06      2016-02-05 23:02:13 -0500
  - Prune experimental t/xs.t t/ffi.t test

0.05      2016-01-28 14:16:23 -0500
  - make configure requires for Alien::Base::ModuleBuild
    instead of Alien::Base

0.04      2015-04-22 07:18:20 -0400
  - use alien_stage_install

0.03      2015-03-12 20:48:35 -0400
  - Bump Alien::Base requirement up to 0.014

0.02      2014-09-11 16:55:51 -0400
  - added Alien::Base as a configure requires

0.01      2014-09-11 14:45:41 -0400
  - initial version