@@ -1,0 +1,15 @@
+use alienfile;
+
+plugin 'PkgConfig' => 'libedit';
+
+share {
+
+  plugin Download => (
+    url     => 'http://thrysoee.dk/editline',
+    version => qr/^libedit-([0-9\.\-]+)\.tar\.gz$/,
+  );
+
+  plugin Extract => 'tar.gz';
+  plugin 'Build::Autoconf' => ();
+
+};
