@@ -9,15 +9,10 @@ version          = 0.06
 :version              = 1.97
 travis_status         = 1
 release_tests         = 1
-installer             = Alien
-alien_name            = libedit
-alien_build_command   = %c --prefix=%s
-alien_build_command   = make
-alien_isolate_dynamic = 1
-alien_repo            = http://thrysoee.dk/editline
-alien_pattern         = ^libedit-.*\.tar\.gz$
-alien_stage_install   = 1
 irc                   = irc://irc.perl.org/#native
+
+[AlienBuild]
+:version = 0.11
 
 [RemovePrereqs]
 remove = strict
@@ -31,8 +26,4 @@ HTTP::Tiny = 0.044
 cpan = 1
 
 [Meta::Dynamic::Config]
-
-[PruneFiles]
-filename = t/xs.t
-filename = t/ffi.t
 
