@@ -1,10 +1,6 @@
-use strict;
-use warnings;
-use Test::Stream -V1;
+use Test2::Bundle::Extended;
 use Test::Alien;
 use Alien::Editline;
-
-plan 3;
 
 alien_ok 'Alien::Editline';
 
@@ -16,3 +12,5 @@ ffi_ok { symbols => ['history_init', 'history_end'] }, with_subtest {
   $ffi->function('history_end' => ['opaque'] => 'void')->call($ptr);
   ok 1, 'history_end did not crash!';
 };
+
+done_testing;
