@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Migrate to Alien::Build + alienfile
 
 0.06      2016-02-05 23:02:13 -0500
   - Prune experimental t/xs.t t/ffi.t test
